[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pytube = "^10.5.1"
flask = "^1.1.2"
telegram = "^0.0.1"
bs4 = "^0.0.1"
lxml = "^4.6.2"
pycairo = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
